AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = liblynx.la
include_HEADERS = \
	65SC02.h \
	cart.h \
	intvec.h \
	log.h \
	lynx.h \
	mikey.h \
	misc.h \
	ram.h \
	rom.h \
	suzy.h
liblynx_la_SOURCES = \
	log.c \
	lynx.c \
	mikey.c \
	ram.c \
	rom.c
liblynx_la_CFLAGS = -Wall
liblynx_la_LDFLAGS = -version-info 0:0:0
