AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = liblynx.la
include_HEADERS = \
	65SC02.h \
	cart.h \
	cpu.h \
	log.h \
	lynx.h \
	mem.h \
	memmap.h \
	mikey.h \
	misc.h \
	msg.h \
	ram.h \
	rom.h \
	suzy.h \
	sysbus.h \
	sysclock.h
liblynx_la_SOURCES = \
	cpu.c \
	log.c \
	lynx.c \
	mem.c \
	mikey.c \
	msg.c \
	ram.c \
	rom.c \
	suzy.c \
	sysbus.c \
	sysclock.c
liblynx_la_CFLAGS = -Wall
liblynx_la_LDFLAGS = -version-info 0:0:0
